# helm

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude-plugin/skills/: aya  relay
.claude-plugin/skills/aya/: SKILL.md
.claude-plugin/skills/aya-install/: SKILL.md
.claude-plugin/skills/relay/: SKILL.md
.claude/commands/: aya-pair.md  aya-refresh.md  aya-send.md  aya-setup.md  aya-status.md  aya-triage-packets.md  aya-watch.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  gateway-ci.yml  release.yml
docs/: README.md  architectural-review-ai-first.md  architecture.md  e2e-audit-2026-04-16.md  idle-tracking.md  mcp-config-example.json  packet-schema.md  scheduler-flow-map.md  self-hosted-relay.md
framework/scripts/: status_check.py
gateway/: README.md  docker-compose.yml
gateway/app/: effects.py  main.py
gateway/tests/: test_auth.py  test_effects.py
scripts/: bootstrap.py
skills/architecture/: SKILL.md
skills/dev-architecture/: SKILL.md
skills/dev-discovery/: SKILL.md
skills/dev-implement/: SKILL.md
skills/dev-meeting/: SKILL.md
skills/dev-plan/: SKILL.md
skills/discovery/: SKILL.md
skills/eod/: SKILL.md
skills/feature/: SKILL.md
skills/finish/: SKILL.md
skills/implement/: SKILL.md
skills/meeting/: SKILL.md
skills/morning/: SKILL.md
skills/pivot/: SKILL.md
skills/plan/: SKILL.md
skills/status/: SKILL.md
src/ai_assist/: __init__.py  cli.py  identity.py  packet.py  pair.py  profile.py  relay.py  scheduler.py  status.py  workspace.py
src/aya/: __init__.py  ci.py  cli.py  config.py  context.py  credentials.py  encryption.py  identity.py  install.py  log.py  mcp_server.py  packet.py  pair.py  paths.py  profile.py  relay.py  rewake.py  scheduler.py  status.py  workspace.py
src/aya/scheduler/: __init__.py  core.py  display.py  providers.py  storage.py  time_utils.py  types.py
src/helm/: cli.py  packet.py  pair.py  workspace.py
templates/: AGENTS.md  CLAUDE.md
tests/: test_ci.py  test_ci_provider.py  test_cli.py  test_config.py  test_context.py  test_credentials.py  test_encryption.py  test_identity.py  test_install.py  test_json_contract.py  test_log.py  test_mcp_server.py  test_packet.py  test_pair.py  test_paths.py  test_profile.py  test_relay.py  test_rewake.py  test_scheduler.py  test_scheduler_concurrency.py  test_scheduler_display.py  test_scheduler_idle.py  test_scheduler_providers.py  test_scheduler_tick.py  test_session_noise.py  test_status.py  test_workspace.py
