[project]
name = "ai-assist"
version = "0.2.0"
description = "Personal AI assistant toolkit — sync, schedule, bootstrap"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24",
    "cryptography>=46",
    "websockets>=16",
    "python-ulid>=3",
    "pydantic>=2",
    "rich>=14",
    "base58>=2",
    "coincurve>=21.0.0",
]

[project.scripts]
assist = "ai_assist.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_assist"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pylint>=4",
    "pytest>=9",
    "pytest-asyncio>=1",
    "mypy>=1.19",
    "respx>=0.22",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # unused arguments
    "PTH",  # pathlib usage
    "ERA",  # eradicate
    "PGH",  # pygrep-hooks
    "PLC",  # pylint conventions
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
    "RUF",  # Ruff-specific rules
    "ANN",  # flake8-annotations
]
ignore = [
    "B008",    # Typer/Click intentionally uses function calls in parameter defaults
    "ANN401",  # allow Any when unavoidable in boundary code
    "S101",    # allow assert (especially in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_assist"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",      # test signatures don't need full annotations
    "ARG",      # pytest fixtures often look unused
    "PLR2004",  # magic values in test assertions
    "S",        # tests may use patterns flagged by security rules
    "T20",      # print useful in debugging tests
]

[tool.ruff.format]
quote-style = "double"

[tool.pylint.main]
py-version = "3.13"
source-roots = ["src"]

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.13"
strict = true
