[project]
name = "aya-ai-assist"
version = "1.34.0"
description = "Personal AI assistant toolkit — sync, schedule, identity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24",
    "cryptography>=46",
    "websockets>=16",
    "python-ulid>=3",
    "pydantic>=2",
    "rich>=14",
    "base58>=2",
    "coincurve>=20.0.0,<22",  # 21.0.0 has no cp314 wheel; source build fails on cffi 2.0.0 (see #101)
    "mcp>=1.0",
]

[project.scripts]
aya = "aya.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aya"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pylint>=4",
    "pytest>=9",
    "pytest-asyncio>=1",
    "mypy>=1.19",
    "respx>=0.22",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # unused arguments
    "PTH",  # pathlib usage
    "ERA",  # eradicate
    "PGH",  # pygrep-hooks
    "PLC",  # pylint conventions
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
    "RUF",  # Ruff-specific rules
    "ANN",  # flake8-annotations
]
ignore = [
    "B008",    # Typer/Click intentionally uses function calls in parameter defaults
    "ANN401",  # allow Any when unavoidable in boundary code
    "S101",    # allow assert (especially in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["aya"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",      # test signatures don't need full annotations
    "ARG",      # pytest fixtures often look unused
    "PLR2004",  # magic values in test assertions
    "S",        # tests may use patterns flagged by security rules
    "T20",      # print useful in debugging tests
    "RUF001",   # EN dashes intentional in time-range test data
    "PLC0415",  # module-level import inside test helper
]
"src/aya/ci.py" = [
    "S603",     # subprocess call — git/gh CLI, not untrusted input
]
"src/aya/workspace.py" = [
    "E501",     # long lines in embedded markdown/shell templates — can't wrap
    "S110",     # try-except-pass intentional (best-effort dotfile writes)
    "S603",     # subprocess call without shell — intentional (no shell injection risk)
    "S607",     # partial path — intentional (python3 resolved from PATH)
    "PLW1510",  # subprocess.run without check — best-effort scaffold step
    "ARG001",   # unused arg in callback signature required by caller contract
]
"src/aya/scheduler/__init__.py" = [
    "F401",     # re-exports for backwards compatibility
    "I001",     # import grouping: re-exports organised by submodule, not stdlib order
    "RUF022",   # __all__ grouped by submodule, not alphabetically
]
"src/aya/scheduler/core.py" = [
    "SIM102",   # nested if intentional for readability
]
"src/aya/scheduler/providers.py" = [
    "S603",     # subprocess call — gh CLI, not untrusted input
    "S607",     # partial path — gh resolved from PATH
    "PLC0415",  # httpx is an optional dep; import kept lazy inside try/except
]
"src/aya/scheduler/storage.py" = [
    "PLC0415",  # deferred import of package __init__ for monkeypatch support
]
"src/aya/scheduler/time_utils.py" = [
    "PLC0415",  # deferred import of storage to break circular dependency
]
"src/aya/mcp_server.py" = [
    "PLC0415",  # deferred imports keep server startup lean
    "ARG005",   # lambda adapter for status handler ignores args intentionally
]
"src/aya/cli.py" = [
    "PLC0415",  # deferred import of mcp_server avoids pulling heavy deps at CLI startup
]
"src/aya/log.py" = [
    "S603",     # subprocess call — git CLI, not untrusted input
    "S607",     # partial path — git resolved from PATH
]
"src/aya/status.py" = [
    "RUF001",   # EN dashes intentional in time-range parsing strings
    "RUF002",   # EN dashes intentional in time-range parsing docstrings
    "RUF003",   # EN dashes intentional in time-range parsing comments
    "B007",     # unused loop var — pre-existing
    "S110",     # try-except-pass intentional
    "SIM102",   # collapsible-if — pre-existing style
]

[tool.ruff.format]
quote-style = "double"

[tool.pylint.main]
py-version = "3.13"
source-roots = ["src"]

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.13"
strict = true

# Pre-existing type errors in these modules — tracked for cleanup in issue #16
# mypy 1.19 does not support disable_error_codes per-module; ignore_errors used instead.
# Remove each entry as the module is brought into strict compliance.
[[tool.mypy.overrides]]
module = ["aya.packet", "aya.relay", "aya.pair", "aya.status", "aya.cli", "aya.mcp_server"]
ignore_errors = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install --quiet build && python -m build"
commit_parser = "angular"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
